[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprites/Enemies/tank-unit.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Player/pixel_character_pale_blue_original.png" type="Texture" id=2]
[ext_resource path="res://ShareTechMono-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/MainMenuController.gd" type="Script" id=4]
[ext_resource path="res://NXGunGirl Logo.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 192, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 240, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 288, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 336, 144, 48, 48 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 64 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=15]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0.301961, 0.258824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NXGunGirl Logo" type="Sprite" parent="."]
position = Vector2( 320, 75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="PlayerDumy" type="AnimatedSprite" parent="."]
position = Vector2( 414, 160 )
frames = SubResource( 9 )
frame = 2
playing = true

[node name="TankDummy" type="AnimatedSprite" parent="."]
position = Vector2( 208, 160 )
frames = SubResource( 14 )
playing = true

[node name="StartBlink" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="PressStartContainer" type="CenterContainer" parent="."]
margin_top = 262.0
margin_right = 640.0
margin_bottom = 317.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressStart" type="Label" parent="PressStartContainer"]
margin_left = 157.0
margin_top = 13.0
margin_right = 482.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "Press + to start the game"
align = 1
valign = 1

[connection signal="timeout" from="StartBlink" to="." method="blink_flip"]
